# Color-Lines-in-Qt-QML

./: .gitignore  CMakeLists.txt  Makefile  README.md  colorlinesmodel.cc  colorlinesmodel.h  main.cc
components/: Main.qml  NewGameBtn.qml  PlayField.qml
model/: colorlinesmodel.cc  colorlinesmodel.h
